--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
     <div class="chat-container">
         <div class="chat-header">
-            <h2>Gemini Chatbot</h2>
+            <h2 id="chat-title">Gemini Chatbot</h2>
             <select id="language-select">
                 <option value="en">English</option>
                 <option value="ja">日本語</option>
@@ -83,8 +83,8 @@
             <input type="text" id="api-key" placeholder="APIキーを入力してください" style="width: calc(100% - 20px);">
         </div>
         <div class="chat-rooms">
-            <button onclick="addRoom()">+ ルーム追加</button>
-            <button onclick="deleteRoom()">- ルーム削除</button>
+            <button onclick="addRoom()" id="add-room-btn">+ ルーム追加</button>
+            <button onclick="deleteRoom()" id="delete-room-btn">- ルーム削除</button>
             <div id="rooms-container"></div>
         </div>
         <div class="messages" id="messages">
@@ -92,8 +92,8 @@
         </div>
         <div class="controls">
             <input type="text" id="user-input" class="input-area" placeholder="メッセージを入力...">
-            <button onclick="sendMessage()">送信</button>
-            <button onclick="resetChat()">リセット</button>
+            <button onclick="sendMessage()" id="send-btn">送信</button>
+            <button onclick="resetChat()" id="reset-btn">リセット</button>
         </div>
     </div>
 
@@ -102,10 +102,10 @@
         const baseEndpoint = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=';
         let currentRoom = 'default';
         let chatRooms = JSON.parse(localStorage.getItem('chatRooms')) || { 'default': [] };
+        let currentLanguage = 'ja';
 
-        // 新しいチャットルームを追加する関数
         function addRoom() {
-            const roomName = prompt('新しいルーム名を入力してください:');
+            const roomName = prompt(getText('newRoomPrompt'));
             if (roomName && !chatRooms[roomName]) {
                 chatRooms[roomName] = [];
                 saveChatRooms();
@@ -113,9 +113,8 @@
             }
         }
 
-        // チャットルームを削除する関数
         function deleteRoom() {
-            const roomName = prompt('削除するルーム名を入力してください:');
+            const roomName = prompt(getText('deleteRoomPrompt'));
             if (roomName && chatRooms[roomName] && roomName !== 'default') {
                 delete chatRooms[roomName];
                 saveChatRooms();
@@ -124,11 +123,10 @@
                     changeRoom('default');
                 }
             } else if (roomName === 'default') {
-                alert('デフォルトのルームは削除できません。');
+                alert(getText('defaultRoomError'));
             }
         }
 
-        // チャットルームのリストを更新する関数
         function updateRooms() {
             const roomsContainer = document.getElementById('rooms-container');
             roomsContainer.innerHTML = '';
@@ -140,14 +138,12 @@
             });
         }
 
-        // ルームを変更する関数
         function changeRoom(room) {
             currentRoom = room;
             document.getElementById('messages').innerHTML = '';
             chatRooms[room].forEach(message => displayMessage(message));
         }
 
-        // メッセージを表示する関数
         function displayMessage(message) {
             const messageDiv = document.createElement('div');
             messageDiv.className = message.sender === 'user' ? 'message user-message' : 'message bot-message';
@@ -155,7 +151,6 @@
             messageDiv.onclick = () => editMessage(message);
             document.getElementById('messages').appendChild(messageDiv);
 
-            // KaTeXによる数式のレンダリング
             renderMathInElement(messageDiv, {
                 delimiters: [
                     { left: "$$", right: "$$", display: true },
@@ -166,10 +161,9 @@
             });
         }
 
-        // ユーザーメッセージを編集する関数
         function editMessage(message) {
             if (message.sender === 'user') {
-                const newMessageText = prompt('メッセージを編集してください:', message.text);
+                const newMessageText = prompt(getText('editMessagePrompt'), message.text);
                 if (newMessageText !== null) {
                     message.text = newMessageText;
                     chatRooms[currentRoom] = chatRooms[currentRoom].map(msg => msg === message ? message : msg);
@@ -180,7 +174,6 @@
             }
         }
 
-        // メッセージを送信する関数
         async function sendMessage() {
             const userInput = document.getElementById('user-input');
             const messageText = userInput.value;
@@ -193,7 +186,7 @@
 
             const apiKey = document.getElementById('api-key').value;
             if (!apiKey) {
-                alert('APIキーを入力してください。');
+                alert(getText('missingApiKey'));
                 return;
             }
 
@@ -201,14 +194,14 @@
             if (response.error) {
                 alert(response.error);
             } else {
-                const botMessage = { sender: 'bot', text: response.generatedText || 'No response' };
+                const botMessageText = response.candidates?.[0]?.output || getText('noResponse');
+                const botMessage = { sender: 'bot', text: botMessageText };
                 chatRooms[currentRoom].push(botMessage);
                 displayMessage(botMessage);
                 saveChatRooms();
             }
         }
 
-        // AIにリクエストを送る関数
         async function sendRequest(apiKey, prompt) {
             try {
                 const response = await fetch(`${baseEndpoint}${apiKey}`, {
@@ -229,37 +222,53 @@
                     return { error: `APIエラー: ${data.error.message}` };
                 }
 
-                return data.response || { error: '応答がありません' };
+                return data;
             } catch (error) {
                 return { error: `フェッチエラー: ${error.message}` };
             }
         }
 
-        // チャットをリセットする関数
         function resetChat() {
-            if (confirm('現在のチャットをリセットしますか？この操作は元に戻せません。')) {
+            if (confirm(getText('resetChatConfirm'))) {
                 chatRooms[currentRoom] = [];
                 document.getElementById('messages').innerHTML = '';
                 saveChatRooms();
             }
         }
 
-        // 言語を切り替えるイベントリスナー
+        function getText(key) {
+            const texts = {
+                'newRoomPrompt': currentLanguage === 'en' ? 'Enter a new room name:' : '新しいルーム名を入力してください:',
+                'deleteRoomPrompt': currentLanguage === 'en' ? 'Enter the room name to delete:' : '削除するルーム名を入力してください:',
+                'defaultRoomError': currentLanguage === 'en' ? 'Default room cannot be deleted.' : 'デフォルトのルームは削除できません。',
+                'editMessagePrompt': currentLanguage === 'en' ? 'Edit your message:' : 'メッセージを編集してください:',
+                'missingApiKey': currentLanguage === 'en' ? 'Please enter an API key.' : 'APIキーを入力してください。',
+                'noResponse': currentLanguage === 'en' ? 'No response' : '応答がありません',
+                'resetChatConfirm': currentLanguage === 'en' ? 'Are you sure you want to reset the chat? This action cannot be undone.' : '現在のチャットをリセットしますか？この操作は元に戻せません。'
+            };
+            return texts[key];
+        }
+
         document.getElementById('language-select').addEventListener('change', (event) => {
-            const selectedLanguage = event.target.value;
-            // 必要なら他のUI要素の言語も切り替えるロジックをここに追加
+            currentLanguage = event.target.value;
+            updateUI();
         });
 
-        // ローカルストレージにチャットデータを保存する関数
+        function updateUI() {
+            document.getElementById('chat-title').textContent = currentLanguage === 'en' ? 'Gemini Chatbot' : 'ジェミニチャットボット';
+            document.getElementById('user-input').placeholder = currentLanguage === 'en' ? 'Enter your message...' : 'メッセージを入力...';
+            document.getElementById('send-btn').textContent = currentLanguage === 'en' ? 'Send' : '送信';
+            document.getElementById('reset-btn').textContent = currentLanguage === 'en' ? 'Reset' : 'リセット';
+            document.getElementById('add-room-btn').textContent = currentLanguage === 'en' ? '+ Add Room' : '+ ルーム追加';
+            document.getElementById('delete-room-btn').textContent = currentLanguage === 'en' ? '- Delete Room' : '- ルーム削除';
+        }
+
         function saveChatRooms() {
             localStorage.setItem('chatRooms', JSON.stringify(chatRooms));
         }
 
-        // 初期化関数
-        window.onload = function () {
-            updateRooms();
-            changeRoom('default');
-        };
+        updateRooms();
+        changeRoom(currentRoom);
     </script>
 </body>
 </html>
